tests/lexer_test/errors/comments.outlexerrors
[unclosedcmt, Unclosed multi-line comment, 21, 1]
